--- a/service-detail.html
+++ b/service-detail.html
@@ -225,62 +225,46 @@
 </div>
 <!-- Booking End -->
 
+
 <body>
   <div class="container py-5">
-    <!-- Service Title -->
-    <div class="text-center mb-5">
-      <h1 id="service-title" class="display-5 fw-bold text-primary"></h1>
+    <h1 class="text-center text-primary mb-4" id="service-title"></h1>
+
+    <!-- Carousel -->
+    <div id="carousel-images" class="carousel slide mb-5" data-bs-ride="carousel">
+      <div class="carousel-inner" id="carousel-inner"></div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carousel-images" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carousel-images" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
     </div>
 
-    <!-- Carousel Images -->
-    <div id="carousel-images" class="mb-5">
-      <!-- Bootstrap Carousel goes here from JS -->
-    </div>
+    <!-- Description -->
+    <p class="lead mb-4" id="service-description"></p>
 
-    <!-- Booking Button -->
-    <div class="text-center mb-4">
-      <a href="#booking" class="btn btn-primary btn-lg px-5">
-        <i class="fa fa-calendar-check me-2"></i> Book Now
-      </a>
-    </div>
-
-    <!-- Service Description -->
+    <!-- Features -->
     <div class="mb-5">
-      <h3 class="text-secondary"><i class="fa fa-info-circle me-2"></i> About This Service</h3>
-      <p id="service-description" class="lead"></p>
+      <h4 class="mb-3 text-uppercase text-primary"><i class="fa fa-check-circle me-2"></i>Features</h4>
+      <ul class="list-group list-group-flush" id="service-features"></ul>
     </div>
 
-    <!-- Service Features -->
-    <div class="mb-5">
-      <h4 class="text-secondary"><i class="fa fa-check-circle me-2"></i> Features</h4>
-      <ul id="service-features" class="list-group list-group-flush">
-        <!-- JS populates this -->
-      </ul>
-    </div>
-
-    <!-- Kenya Attractions -->
-    <div class="mb-5">
-      <h4 class="text-secondary"><i class="fa fa-map-marked-alt me-2"></i> Attractions Around Kenya</h4>
-      <div id="kenya-attractions" class="row g-4">
-        <!-- JS adds image cards or text -->
-      </div>
-    </div>
+    <!-- Attractions -->
+    <div class="mb-5" id="kenya-attractions"></div>
 
     <!-- About PolarHomes -->
-    <div id="about-polarhomes" class="bg-light rounded p-4">
-      <h4 class="text-secondary mb-3"><i class="fa fa-home me-2"></i> Why Choose PolarHomes?</h4>
-      <ul class="list-unstyled">
-        <li><i class="fa fa-check text-primary me-2"></i> Conveniently located near the Nairobi Expressway</li>
-        <li><i class="fa fa-check text-primary me-2"></i> Just minutes from the SGR Station and JKIA Airport</li>
-        <li><i class="fa fa-check text-primary me-2"></i> Close to major shopping malls and restaurants</li>
-        <li><i class="fa fa-check text-primary me-2"></i> Located in the heart of Kenya's capital city</li>
-        <li><i class="fa fa-check text-primary me-2"></i> Offers access to vibrant city life and tourist destinations</li>
-      </ul>
+    <div class="bg-light p-4 rounded" id="about-polarhomes"></div>
+
+    <!-- Book Button -->
+    <div class="text-center mt-5">
+      <a href="booking.html" class="btn btn-lg btn-primary px-5 py-3">
+        <i class="fa fa-calendar-check me-2"></i> Book This Service
+      </a>
     </div>
   </div>
 
   <script src="service-detail.js"></script>
-
 
 <!-- Footer Start -->
 <div class="container-fluid bg-dark text-light footer wow fadeIn pt-4 pb-2 mt-5" data-wow-delay="0.1s">
