--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                <a class="service-item rounded" href="service-detail.html?service=rooms">
+                <a class="service-item rounded" href="service-detail.html?service=starter-kit">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-utensils fa-2x text-primary"></i>
@@ -611,7 +611,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                <a class="service-item rounded" href="service-detail.html?service=rooms">
+                <a class="service-item rounded" href="service-detail.html?service=spa-fitness">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-spa fa-2x text-primary"></i>
@@ -622,7 +622,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                <a class="service-item rounded" href="service-detail.html?service=rooms">
+                <a class="service-item rounded" href="service-detail.html?service=sports-gaming">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-swimmer fa-2x text-primary"></i>
@@ -633,7 +633,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                <a class="service-item rounded" href="service-detail.html?service=rooms">
+                <a class="service-item rounded" href="service-detail.html?service=event-party">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-glass-cheers fa-2x text-primary"></i>
@@ -644,7 +644,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <a class="service-item rounded" href="service-detail.html?service=rooms">
+                <a class="service-item rounded" href="service-detail.html?service=gym-yoga">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-dumbbell fa-2x text-primary"></i>
