--- a/service-detail.html
+++ b/service-detail.html
@@ -258,7 +258,7 @@
 
     <!-- Book Button -->
     <div class="text-center mt-5">
-      <a href="booking.html" class="btn btn-lg btn-primary px-5 py-3">
+      <a href="booking" class="btn btn-lg btn-primary px-5 py-3">
         <i class="fa fa-calendar-check me-2"></i> Book This Service
       </a>
     </div>
