--- a/booking.html
+++ b/booking.html
@@ -122,7 +122,7 @@
                         <a class="me-3" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="me-3" href=""><i class="fab fa-twitter"></i></a>
                         <a class="me-3" href=""><i class="fab fa-linkedin-in"></i></a>
-                        <a class="me-3" href=""><i class="fab fa-instagram"></i></a>
+                        <a class="me-3" href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg== "><i class="fab fa-instagram"></i></a>
                         <a class="" href=""><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
