--- a/booking.html
+++ b/booking.html
@@ -365,8 +365,9 @@
                 <h6 class="text-primary text-uppercase mb-3">Contact</h6>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>Kenya, Nairobi, Syokimau</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+254 723 225 791</p>
-                <p class="mb-2"><i class="fa fa-envelope me-2"></i>polarhomes.com</p>
+                <p class="mb-2"><i class="fa fa-envelope me-2"></i>lindahmiriza@gmail.com</p>
                 <div class="d-flex pt-2">
+                    <a class="btn btn-outline-light btn-social me-1" href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg== "><i class="fab fa-instagram"></i></a>
                     <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-youtube"></i></a>
