--- a/room-details.html
+++ b/room-details.html
@@ -67,7 +67,7 @@
         <!-- Logo & Brand Name -->
         <div class="col-lg-3 bg-dark d-none d-lg-flex align-items-center justify-content-start px-4">
             <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-            <h1 class="m-0 fancy-text ms-2">PH</h1>
+            <h1 class="m-0 fancy-text ms-2"></h1>
         </div>
 
              <!-- Contact & Social Links -->
@@ -88,7 +88,7 @@
                         <a class="me-3" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="me-3" href=""><i class="fab fa-twitter"></i></a>
                         <a class="me-3" href=""><i class="fab fa-linkedin-in"></i></a>
-                        <a class="me-3" href=""><i class="fab fa-instagram"></i></a>
+                        <a class="me-3" href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg== "><i class="fab fa-instagram"></i></a>
                         <a class="" href=""><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
@@ -280,8 +280,9 @@
                 <h6 class="text-primary text-uppercase mb-3">Contact</h6>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>Kenya, Nairobi, Syokimau</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+254 723 225 791</p>
-                <p class="mb-2"><i class="fa fa-envelope me-2"></i>polarhomes.com</p>
+                <p class="mb-2"><i class="fa fa-envelope me-2"></i>lindahmiriza@gmail.com</p>
                 <div class="d-flex pt-2">
+                    <a class="btn btn-outline-light btn-social me-1" href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a>
                     <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-youtube"></i></a>
@@ -307,7 +308,7 @@
     <div class="container border-top mt-3 pt-2">
         <div class="row align-items-center">
             <div class="col-md-6 text-center text-md-start small">
-                &copy; <a class="text-decoration-none text-light" href="#">Polar homes</a>, All Rights Reserved. 
+                &copy; <a class="text-decoration-none text-light" href="#">Polarhomes</a>, All Rights Reserved. 
                 Designed by <a class="text-decoration-none text-primary" href="https://antocapteknologies.com">Antocap Teknologies</a>
             </div>
             <div class="col-md-6 text-center text-md-end small">
