--- a/testimonial.html
+++ b/testimonial.html
@@ -88,7 +88,7 @@
                         <a class="me-3" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="me-3" href=""><i class="fab fa-twitter"></i></a>
                         <a class="me-3" href=""><i class="fab fa-linkedin-in"></i></a>
-                        <a class="me-3" href=""><i class="fab fa-instagram"></i></a>
+                        <a class="me-3" href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a>
                         <a class="" href=""><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
     <!-- Mobile & Tablet Logo (Hidden on large screens) -->
     <a href="index" class="navbar-brand d-flex align-items-center d-lg-none">
         <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-        <h1 class="m-0 fancy-text ms-2">PH</h1>
+        <h1 class="m-0 fancy-text ms-2"></h1>
     </a>
 
     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -116,7 +116,6 @@
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu rounded-0 m-0">
                     <a href="booking" class="dropdown-item">Booking</a>
-                    <a href="team" class="dropdown-item">Our Team</a>
                     <a href="testimonial" class="dropdown-item">Testimonial</a>
                 </div>
             </div>
@@ -156,7 +155,7 @@
                     <h1 class="display-3 text-white mb-3 animated slideInDown">Testimonial</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li class="breadcrumb-item"><a href="index">Home</a></li>
                             <li class="breadcrumb-item"><a href="#">Pages</a></li>
                             <li class="breadcrumb-item text-white active" aria-current="page">Testimonial</li>
                         </ol>
@@ -275,8 +274,9 @@
                 <h6 class="text-primary text-uppercase mb-3">Contact</h6>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>Kenya, Nairobi, Syokimau</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+254 723 225 791</p>
-                <p class="mb-2"><i class="fa fa-envelope me-2"></i>polarhomes.com</p>
+                <p class="mb-2"><i class="fa fa-envelope me-2"></i>lindahmiriza@gmail.com</p>
                 <div class="d-flex pt-2">
+                    <a class="btn btn-outline-light btn-social me-1" href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a>
                     <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-youtube"></i></a>
