--- a/service.html
+++ b/service.html
@@ -132,7 +132,7 @@
     <!-- Mobile & Tablet Logo (Hidden on large screens) -->
     <a href="index" class="navbar-brand d-flex align-items-center d-lg-none">
         <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-        <h1 class="m-0 fancy-text ms-2">PH</h1>
+        <h1 class="m-0 fancy-text ms-2"></h1>
     </a>
 
     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -188,7 +188,7 @@
                     <h1 class="display-3 text-white mb-3 animated slideInDown">Services</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li class="breadcrumb-item"><a href="index">Home</a></li>
                             <li class="breadcrumb-item"><a href="#">Pages</a></li>
                             <li class="breadcrumb-item text-white active" aria-current="page">Services</li>
                         </ol>
@@ -246,7 +246,7 @@
 </div>
 <!-- Booking End -->
 
-            <!-- Service Start -->
+  <!-- Service Start -->
 <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -255,7 +255,7 @@
         </div>
         <div class="row g-4">
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <a class="service-item rounded">
+                <a class="service-item rounded" href="service-detail.html?service=rooms">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-hotel fa-2x text-primary"></i>
@@ -266,7 +266,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                <a class="service-item rounded">
+                <a class="service-item rounded" href="service-detail.html?service=starter-kit">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-utensils fa-2x text-primary"></i>
@@ -277,7 +277,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                <a class="service-item rounded" href="">
+                <a class="service-item rounded" href="service-detail.html?service=spa-fitness">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-spa fa-2x text-primary"></i>
@@ -288,7 +288,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                <a class="service-item rounded">
+                <a class="service-item rounded" href="service-detail.html?service=sports-gaming">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-swimmer fa-2x text-primary"></i>
@@ -299,7 +299,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                <a class="service-item rounded">
+                <a class="service-item rounded" href="service-detail.html?service=event-party">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-glass-cheers fa-2x text-primary"></i>
@@ -310,7 +310,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <a class="service-item rounded">
+                <a class="service-item rounded" href="service-detail.html?service=gym-yoga">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-dumbbell fa-2x text-primary"></i>
@@ -324,7 +324,7 @@
     </div>
 </div>
 <!-- Service End -->
-
+        
            <!-- Testimonial Start -->
 <div class="container-xxl testimonial my-5 py-5 bg-dark wow zoomIn" data-wow-delay="0.1s">
     <div class="container">
