--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!-- Mobile & Tablet Logo (Hidden on large screens) -->
     <a href="index" class="navbar-brand d-flex align-items-center d-lg-none">
         <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-        <h1 class="m-0 fancy-text ms-2">PH</h1>
+        <h1 class="m-0 fancy-text ms-2"></h1>
     </a>
 
     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -506,7 +506,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="room-item shadow rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/four-bedroom.jpg" alt="">
+                        <img class="img-fluid" src="img/fourr-bedroom.jpg" alt="">
                         <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">$155/Night</small>
                     </div>
                     <div class="p-4 mt-2">
