--- a/room.html
+++ b/room.html
@@ -189,7 +189,7 @@
                     <h1 class="display-3 text-white mb-3 animated slideInDown">Rooms</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li class="breadcrumb-item"><a href="index">Home</a></li>
                             <li class="breadcrumb-item"><a href="#">Pages</a></li>
                             <li class="breadcrumb-item text-white active" aria-current="page">Rooms</li>
                         </ol>
@@ -356,7 +356,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="room-item shadow rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/four-bedroom.jpg" alt="">
+                        <img class="img-fluid" src="img/fourr-bedroom.jpg" alt="">
                         <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">$155/Night</small>
                     </div>
                     <div class="p-4 mt-2">
