--- a/room.html
+++ b/room.html
@@ -361,7 +361,7 @@
                     </div>
                     <div class="p-4 mt-2">
                         <div class="d-flex justify-content-between mb-3">
-                            <h5 class="mb-0">4 Bedroom Villa</h5>
+                            <h5 class="mb-0">4 Bedroom Villa/Stand Alone</h5>
                             <div class="ps-2">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
