--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 
         <!-- Video Background Column -->
         <div class="col-md-6">
-            <div class="video" style="background-image: url('images/luxury-room.jpg'); background-size: cover; background-position: center; height: 100%; min-height: 400px; position: relative;">
+            <div class="video" style="background-image: url('img/luxury-room.jpg'); background-size: cover; background-position: center; height: 100%; min-height: 400px; position: relative;">
                 <button type="button" class="btn-play" data-bs-toggle="modal" data-bs-target="#videoModal">
                     <span></span>
                 </button>
