--- a/booking.html
+++ b/booking.html
@@ -323,7 +323,7 @@
                     <option value="Studio Executive suite">Studio Executive suite</option>
                     <option value="One Bedroom suite">One Bedroom suite</option>
                     <option value="Two Bedroom suite">Two Bedroom suite</option>
-                    <option value="4 Bedroom suite">4 Bedroom Villa</option>
+                    <option value="4 Bedroom suite">4 Bedroom Villa/Stand Alone</option>
                 </select>
                 <label for="select3">Select A Room</label>
             </div>
