--- a/index.html
+++ b/index.html
@@ -767,11 +767,11 @@
             <div class="col-lg-4 col-md-12">
                 <h6 class="text-primary text-uppercase mb-3">Services</h6>
                 <div class="d-flex flex-column">
-                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service">Food & Restaurant</a>
-                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service">Spa & Fitness</a>
-                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service">Sports & Gaming</a>
-                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service">Event & Party</a>
-                    <a class="btn btn-link text-light text-start p-0" href="service">GYM & Yoga</a>
+		    <a class="btn btn-link text-light text-start p-0 mb-1" href="service-detail.html?service=rooms">Accomodation</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service-detail.html?service=spa-fitness">Spa & Fitness</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service-detail.html?service=sports-gaming">Sports & Gaming</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service-detail.html?service=event-party">Event & Party</a>
+                    <a class="btn btn-link text-light text-start p-0" href="service-detail.html?service=gym-yoga">GYM & Yoga</a>
                 </div>
             </div>
         </div>
