--- a/contact.html
+++ b/contact.html
@@ -375,8 +375,14 @@
 </div>
 <!-- Footer End -->
 
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+       <!-- WhatsApp Button -->
+<a href="https://wa.me/254723225791?text=Hello%2C%20from%20Polarhomes%20website" 
+   class="btn btn-lg btn-success btn-lg-square whatsapp-contact" 
+   target="_blank" 
+   rel="noopener noreferrer" 
+   style="position: fixed; bottom: 20px; right: 20px; z-index: 9999;">
+   <i class="bi bi-whatsapp" style="font-size: 1.5rem;"></i>
+</a>
     </div>
 
     <!-- JavaScript Libraries -->
