--- a/service-detail.html
+++ b/service-detail.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Polarhomes | Room Details | Airbnb in Syokimau near JKIA</title>
+    <title>Polarhomes | Service Details | Airbnb in Syokimau near JKIA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
@@ -152,7 +152,7 @@
         <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-1.jpg);">
             <div class="container-fluid page-header-inner py-5">
                 <div class="container text-center pb-5">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">Room Details</h1>
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Service Details</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
                             <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -325,8 +325,14 @@
 </div>
 <!-- Footer End -->
 
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+  <!-- WhatsApp Button -->
+<a href="https://wa.me/254723225791?text=Hello%2C%20from%20Polarhomes%20website" 
+   class="btn btn-lg btn-success btn-lg-square whatsapp-contact" 
+   target="_blank" 
+   rel="noopener noreferrer" 
+   style="position: fixed; bottom: 20px; right: 20px; z-index: 9999;">
+   <i class="bi bi-whatsapp" style="font-size: 1.5rem;"></i>
+</a>
     </div>
 
     <!-- JavaScript Libraries -->
