--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
             </div>
             <div class="modal-body">
                 <video id="customVideo" controls autoplay style="width: 100%; border-radius: 8px;">
-                    <source src="videos/hotel-tour.mp4" type="video/mp4">
+                    <source src="img/hotel-tour.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
