--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
     <h6 class="text-primary text-uppercase mb-3">Contact</h6>
 
     <p class="mb-2">
-        <i class="fa fa-map-marker-alt me-2 text-primary"></i>
+        <i class="fa fa-map-marker-alt me-2 text-white"></i>
         <a href="https://www.google.com/maps/place/Syokimau,+Nairobi,+Kenya" target="_blank" class="text-decoration-none text-dark">
             Kenya, Nairobi, Syokimau
         </a>
