--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
 
     <p class="mb-0">
         <i class="fa fa-globe me-2 text-primary"></i>
-        <a href="https://polarhomes.org" target="_blank" class="text-decoration-none text-white">polarhomes.org</a>
+        <a href="https://polarhomes.org" target="_blank" class="text-decoration-none text-white">www.polarhomes.org</a>
     </p>
 
     <div class="d-flex pt-3">
