--- a/about.html
+++ b/about.html
@@ -496,7 +496,7 @@
     <p class="mb-2">
         <i class="fab fa-whatsapp me-2 text-success"></i>
         <a href="https://wa.me/254723225791?text=Hello%2C%20from%20Polarhomes%20website" target="_blank" class="text-decoration-none text-white">
-            Chat on WhatsApp
+            +254 723 225 791
         </a>
     </p>
 
@@ -507,7 +507,7 @@
 
     <p class="mb-0">
         <i class="fa fa-globe me-2 text-primary"></i>
-        <a href="https://polarhomes.org" target="_blank" class="text-decoration-none text-white">polarhomes.org</a>
+        <a href="https://polarhomes.org" target="_blank" class="text-decoration-none text-white">www.polarhomes.org</a>
     </p>
 
     <div class="d-flex pt-3">
