--- a/testimonial.html
+++ b/testimonial.html
@@ -269,12 +269,38 @@
                 </p>
             </div>
 
-            <!-- Contact Info -->
-            <div class="col-md-6 col-lg-4">
-                <h6 class="text-primary text-uppercase mb-3">Contact</h6>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>Kenya, Nairobi, Syokimau</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+254 723 225 791</p>
-                <p class="mb-2"><i class="fa fa-envelope me-2"></i>lindahmiriza@gmail.com</p>
+<!-- Contact Info -->
+<div class="col-md-6 col-lg-4 text-white">
+    <h6 class="text-primary text-uppercase mb-3">Contact</h6>
+
+    <p class="mb-2">
+        <i class="fa fa-map-marker-alt me-2 text-primary"></i>
+        <a href="https://www.google.com/maps/place/Syokimau,+Nairobi,+Kenya" target="_blank" class="text-decoration-none text-white">
+            Kenya, Nairobi, Syokimau
+        </a>
+    </p>
+
+    <p class="mb-2">
+        <i class="fa fa-phone-alt me-2 text-primary"></i>
+        <a href="tel:+254723225791" class="text-decoration-none text-white">+254 723 225 791</a>
+    </p>
+
+    <p class="mb-2">
+        <i class="fab fa-whatsapp me-2 text-success"></i>
+        <a href="https://wa.me/254723225791?text=Hello%2C%20from%20Polarhomes%20website" target="_blank" class="text-decoration-none text-white">
+            +254 723 225 791
+        </a>
+    </p>
+
+    <p class="mb-2">
+        <i class="fa fa-envelope me-2 text-primary"></i>
+        <a href="mailto:lindahmiriza@gmail.com" class="text-decoration-none text-white">lindahmiriza@gmail.com</a>
+    </p>
+
+    <p class="mb-0">
+        <i class="fa fa-globe me-2 text-primary"></i>
+        <a href="https://polarhomes.org" target="_blank" class="text-decoration-none text-white">www.polarhomes.org</a>
+    </p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social me-1" href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a>
                     <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-twitter"></i></a>
