--- a/index.html
+++ b/index.html
@@ -555,9 +555,9 @@
         </div>
 
         <!-- Video Background Column -->
-        <div class="col-md-6">
-            <div class="video d-flex justify-content-center align-items-center overflow-hidden" style="height: 100%; min-height: 400px;">
-                <video autoplay muted loop playsinline style="width: 100%; height: 100%; object-fit: cover;">
+        <div class="col-md-6 d-flex align-items-stretch">
+            <div class="w-100" style="position: relative; min-height: 400px; max-height: 400px; overflow: hidden;">
+                <video autoplay muted loop playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
                     <source src="img/hotel-tour.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
