--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Polar homes | Airbnb Services in Syokimau near JKIA</title>
+    <title>Polar homes | jkia accomodation | Airbnb Services in Syokimau near JKIA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
     <meta name="title" content="Polar homes | Airbnb Services in Syokimau near JKIA">
-    <meta name="description" content="Explore Polarhomes Airbnb services in Syokimau. We offer clean, affordable, and secure accommodations near JKIA and Nairobi Expressway. Ideal for short stays, long stays, and business travelers.">
-    <meta name="keywords" content="Polar homes Airbnb, Airbnb Syokimau, JKIA stays, Nairobi Expressway rentals, affordable Airbnb Kenya, airport accommodations, short-term rentals JKIA, Airbnb Nairobi Kenya, furnished apartment Nairobi, business travel Syokimau, Polar homes, Airbnb near airport Nairobi, cozy rental Nairobi, secure Airbnb Syokimau">
+    <meta name="description" content="Accomodation near jkia, sgr and expressway. Explore Polarhomes Airbnb services in Syokimau. We offer clean, affordable, and secure accommodations near JKIA and Nairobi Expressway. Ideal for short stays, long stays, and business travelers.">
+    <meta name="keywords" content="jkia accomodation, sgr accomodation, near express way accomodation, Polarhomes Airbnb, Airbnb Syokimau, JKIA stays, Nairobi Expressway rentals, affordable Airbnb Kenya, airport accommodations, short-term rentals JKIA, Airbnb Nairobi Kenya, furnished apartment Nairobi, business travel Syokimau, Polar homes, Airbnb near airport Nairobi, cozy rental Nairobi, secure Airbnb Syokimau">
     <meta name="author" content="Polar homes">
 	<meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
