--- a/about.html
+++ b/about.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>About Us | Polarhomes Airbnb Syokimau near JKIA Nairobi</title>
+    <title>About Us | Accomodation near jkia, sgr and expressway. | Polarhomes Airbnb syokimau near JKIA Nairobi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
     <meta name="title" content="About Us | Polarhomes Airbnb Syokimau near JKIA Nairobi">
-    <meta name="description" content="Learn more about Polarhomes – a trusted Airbnb hosting service near JKIA Airport and Syokimau. Discover who we are, our mission, and why travelers trust us for safe, stylish, and convenient stays.">
-    <meta name="keywords" content="About Polarhomes, Airbnb Syokimau, Airbnb near JKIA, Nairobi Airbnb host, Airbnb Kenya, Polarhomes JKIA, Nairobi Expressway stay, short stay Kenya, apartment host Nairobi">
+    <meta name="description" content="Accomodation near jkia, sgr and expressway. Learn more about Polarhomes – a trusted Airbnb hosting service near JKIA Airport and Syokimau in in design makumbi park. Discover who we are, our mission, and why travelers trust us for safe, stylish, and convenient stays.">
+    <meta name="keywords" content="Accomodation near jkia, sgr and expressway accomodation, airbnb makumbi, makumbi in design park, About Polarhomes, Airbnb Syokimau, Airbnb near JKIA, Nairobi Airbnb host, Airbnb Kenya, Polarhomes JKIA, Nairobi Expressway stay, short stay Kenya, apartment host Nairobi">
     <meta name="author" content="Polarhomes">
     <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
