--- a/about.html
+++ b/about.html
@@ -246,7 +246,7 @@
                     Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
                     Nestled along the Expressway in Syokimau, we offer a seamless blend of comfort, convenience, and adventure.
                     Whether you're looking for a relaxing getaway, a business trip, or a fun family vacation, we provide a 
-                    curated selection of premium accommodations tailored to your needs.
+                    curated selection of premium accommodations tailored to your needs. Experience accomodation in jkia or near jkia, sgr and expressway as well as near large market centre and also in the capital city of kenya
                 </p>
                 <div class="row g-3 pb-4">
                     <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
