--- a/booking.html
+++ b/booking.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Book Your Stay | Polarhomes Airbnb near JKIA Nairobi</title>
+    <title>Book Your Stay | Polarhomes Accomodation near JKIA Nairobi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
     <meta name="title" content="Book Your Stay | Polarhomes Airbnb near JKIA Nairobi">
-    <meta name="description" content="Book a secure, fully-furnished Airbnb apartment with Polarhomes near JKIA Airport, Syokimau, and Nairobi Expressway. Enjoy a seamless booking process, great rates, and excellent service.">
-    <meta name="keywords" content="book Polarhomes, Airbnb booking JKIA, Airbnb Syokimau, Nairobi Expressway Airbnb, Polar homes booking, Kenya Airbnb rental, reserve Airbnb Nairobi, Polarhomes apartment booking, airport stay Nairobi, Airbnb Kenya booking">
+    <meta name="description" content="jkia accomodation, Book a secure, fully-furnished Airbnb apartment with Polarhomes near JKIA Airport, Syokimau, and Nairobi Expressway. Enjoy a seamless booking process, great rates, and excellent service.">
+    <meta name="keywords" content="accomodation near jkia, jkia accomodation, sgr accomodation, expressway accomodation, book Polarhomes, Airbnb booking JKIA, Airbnb Syokimau, Nairobi Expressway Airbnb, Polar homes booking, Kenya Airbnb rental, reserve Airbnb Nairobi, Polarhomes apartment booking, airport stay Nairobi, Airbnb Kenya booking">
     <meta name="author" content="Polarhomes">
     <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
