--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Contact Polarhomes | Airbnb Syokimau near JKIA</title>
+    <title>Contact Polarhomes | Airbnb Syokimau near JKIA| accomodation jkia | jkia accomodation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
     <meta name="title" content="Contact Polarhomes | Airbnb Syokimau near JKIA">
-    <meta name="description" content="Get in touch with Polarhomes for secure, affordable, and fully-furnished Airbnb rentals near JKIA, Syokimau, and the Nairobi Expressway. We're here to assist with your booking or inquiries.">
-    <meta name="keywords" content="contact Polarhomes, Airbnb Syokimau contact, JKIA Airbnb host, Polar homes Kenya, Nairobi Airbnb contact, book Airbnb JKIA, reach Polarhomes, Airbnb Kenya customer care, furnished rental support, Airbnb Nairobi Expressway host, Polarhomes phone number">
+    <meta name="description" content="Jkia accomodation, accomodation near jkia, Get in touch with Polarhomes for secure, affordable, and fully-furnished Airbnb rentals near JKIA, Syokimau, and the Nairobi Expressway. We're here to assist with your booking or inquiries.">
+    <meta name="keywords" content="accomodation near jkia, jkia accomodation, sgr accomodation, expressway accomodation, contact Polarhomes, Airbnb Syokimau contact, JKIA Airbnb host, Polar homes Kenya, Nairobi Airbnb contact, book Airbnb JKIA, reach Polarhomes, Airbnb Kenya customer care, furnished rental support, Airbnb Nairobi Expressway host, Polarhomes phone number">
     <meta name="author" content="Polarhomes">
     <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
