--- a/room-details.html
+++ b/room-details.html
@@ -2,53 +2,113 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Polarhomes | Room Details | Airbnb in Syokimau near JKIA</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>JKIA Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- SEO Meta Tags -->
-    <meta name="title" content="Polarhomes | Room Details | Airbnb near JKIA, Nairobi Expressway">
-    <meta name="description" content="Explore detailed information about Polarhomes Airbnb rooms near JKIA Airport and Nairobi Expressway. See features, amenities, prices, and photos of our cozy, secure stays in Syokimau.">
-    <meta name="keywords" content="Polarhomes room details, Airbnb room near JKIA, Syokimau stays, Nairobi short stays, furnished apartment Nairobi, secure Airbnb Syokimau, Nairobi airport room, Polarhomes listing, Syokimau guesthouse, rooms with Wi-Fi JKIA, short term rental Syokimau, budget Airbnb Nairobi, Nairobi Expressway room rental, stylish Airbnb Kenya, Polarhomes amenities, Polarhomes accommodation">
-    <meta name="author" content="Polarhomes">
-    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/room-details">
-    <meta property="og:title" content="Polarhomes | Room Details | Cozy Airbnb Stay near JKIA">
-    <meta property="og:description" content="Get all the details on our comfortable and secure Airbnb rooms at Polarhomes. Located in Syokimau near JKIA and Nairobi Expressway. View photos, amenities, and book now.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- SEO Meta Tags -->
+  <meta name="title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway">
+  <meta name="description" content="Looking for affordable and stylish JKIA accommodation? Polarhomes offers modern, secure Airbnb rooms in Syokimau near Nairobi Expressway. Fast Wi-Fi, 24/7 security, and ideal for travelers from JKIA or SGR. Book your stay today.">
+  <meta name="keywords" content="jkia accommodation, syokimau airbnb, nairobi airport stay, sgr accommodation, polarhomes airbnb, expressway room rental, airport guesthouse, short stay near JKIA, affordable jkia lodging, syokimau furnished apartment, secure airbnb syokimau, nairobi airport apartment, polarhomes nairobi, rooms with wifi jkia, polarhomes kenya">
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/room-details">
-    <meta name="twitter:title" content="Polarhomes | Room Details | Airbnb JKIA Nairobi">
-    <meta name="twitter:description" content="See full details of Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Affordable, clean, and fully equipped stays in Syokimau.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <meta name="author" content="Polarhomes">
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+  <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
-    <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.polarhomes.org/room-details">
+  <meta property="og:title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau">
+  <meta property="og:description" content="Explore Polarhomes Airbnb rooms near JKIA. Affordable, modern, and secure stays in Syokimau with fast Wi-Fi and access to Nairobi Expressway.">
+  <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://www.polarhomes.org/room-details">
+  <meta name="twitter:title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau">
+  <meta name="twitter:description" content="See Polarhomes Airbnb details near JKIA & Nairobi Expressway. Clean, affordable short stays with all amenities in Syokimau.">
+  <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
-    <!-- Icon Font Stylesheets -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Favicon -->
+  <link href="img/logo.jpg" rel="icon" type="image/x-icon">
 
-    <!-- Libraries Stylesheets -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LodgingBusiness",
+    "name": "Polarhomes",
+    "image": "https://www.polarhomes.org/img/logo.jpg",
+    "url": "https://www.polarhomes.org/room-details",
+    "telephone": "+254723225791",
+    "priceRange": "$$",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Syokimau, Nairobi",
+      "addressLocality": "Nairobi",
+      "addressRegion": "Nairobi",
+      "postalCode": "00501",
+      "addressCountry": "KE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": -1.3343,
+      "longitude": 36.9258
+    },
+    "amenityFeature": [
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Free Wi-Fi",
+        "value": true
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Near JKIA Airport",
+        "value": true
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Secure Parking",
+        "value": true
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "24/7 Check-in",
+        "value": true
+      }
+    ],
+    "description": "Affordable and secure Airbnb accommodation in Syokimau near JKIA and Nairobi Expressway. Ideal for travelers, business guests, and short stays.",
+    "sameAs": [
+      "https://www.facebook.com/polarhomes",
+      "https://www.instagram.com/polarhomes",
+      "https://www.polarhomes.org"
+    ]
+  }
+  </script>
 
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+  <!-- Icon Fonts -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
+  <!-- Libraries Stylesheets -->
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+
+  <!-- Bootstrap CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
